[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/menu_screen.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="menu_screen" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="game_controller" type="Button" parent="Control"]
margin_left = 440.0
margin_top = 110.0
margin_right = 653.0
margin_bottom = 188.0
toggle_mode = true
text = "pick a control"
icon = ExtResource( 2 )

[node name="startgame" type="Button" parent="Control"]
margin_left = 440.0
margin_top = 320.0
margin_right = 653.0
margin_bottom = 398.0
text = "start_game"
icon = ExtResource( 2 )

[connection signal="toggled" from="Control/game_controller" to="." method="_on_game_controller_toggled"]
[connection signal="pressed" from="Control/startgame" to="." method="_on_startgame_pressed"]
